// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConferenceQueries getConference should return nothing if the requested conference does not exist 1`] = `undefined`;

exports[`ConferenceQueries getConference should return the requested conference correctly 1`] = `
Object {
  "id": "81bdc928-b92d-4111-91f9-3ef93e203e88",
  "name": "Conference 1",
  "rooms": Array [
    Room {
      "id": "8c4bb08a-befe-460c-818a-71c47ecb0761",
      "maxParticipants": 50,
      "name": "Room 1",
    },
    Room {
      "id": "ce63d11d-c51f-4320-a997-fb31b42a6e08",
      "maxParticipants": 50,
      "name": "Room 2",
    },
  ],
}
`;

exports[`ConferenceQueries getConferences should return a paged list of conferences: #0 1`] = `
Object {
  "data": Array [
    Object {
      "id": "3103e833-90d5-47a9-aace-66432881019e",
      "name": "Conference 2",
      "rooms": Array [
        Room {
          "id": "c6ddd134-3edd-4daa-9f59-f29a95650cc3",
          "maxParticipants": 25,
          "name": "Room 7",
        },
        Room {
          "id": "f89d9f18-6611-4520-8bff-8347c70a0b45",
          "maxParticipants": 35,
          "name": "Room 8",
        },
      ],
    },
    Object {
      "id": "81bdc928-b92d-4111-91f9-3ef93e203e88",
      "name": "Conference 1",
      "rooms": Array [
        Room {
          "id": "8c4bb08a-befe-460c-818a-71c47ecb0761",
          "maxParticipants": 50,
          "name": "Room 1",
        },
        Room {
          "id": "ce63d11d-c51f-4320-a997-fb31b42a6e08",
          "maxParticipants": 50,
          "name": "Room 2",
        },
      ],
    },
  ],
  "meta": Object {
    "count": 2,
    "skip": 0,
    "totalCount": 2,
  },
}
`;

exports[`ConferenceQueries getConferences should return a paged list of conferences: #1 1`] = `
Object {
  "data": Array [
    Object {
      "id": "3103e833-90d5-47a9-aace-66432881019e",
      "name": "Conference 2",
      "rooms": Array [
        Room {
          "id": "c6ddd134-3edd-4daa-9f59-f29a95650cc3",
          "maxParticipants": 25,
          "name": "Room 7",
        },
        Room {
          "id": "f89d9f18-6611-4520-8bff-8347c70a0b45",
          "maxParticipants": 35,
          "name": "Room 8",
        },
      ],
    },
    Object {
      "id": "81bdc928-b92d-4111-91f9-3ef93e203e88",
      "name": "Conference 1",
      "rooms": Array [
        Room {
          "id": "8c4bb08a-befe-460c-818a-71c47ecb0761",
          "maxParticipants": 50,
          "name": "Room 1",
        },
        Room {
          "id": "ce63d11d-c51f-4320-a997-fb31b42a6e08",
          "maxParticipants": 50,
          "name": "Room 2",
        },
      ],
    },
  ],
  "meta": Object {
    "count": 2,
    "skip": 0,
    "totalCount": 2,
  },
}
`;

exports[`ConferenceQueries getConferences should return a paged list of conferences: #2 1`] = `
Object {
  "data": Array [
    Object {
      "id": "3103e833-90d5-47a9-aace-66432881019e",
      "name": "Conference 2",
      "rooms": Array [
        Room {
          "id": "c6ddd134-3edd-4daa-9f59-f29a95650cc3",
          "maxParticipants": 25,
          "name": "Room 7",
        },
        Room {
          "id": "f89d9f18-6611-4520-8bff-8347c70a0b45",
          "maxParticipants": 35,
          "name": "Room 8",
        },
      ],
    },
  ],
  "meta": Object {
    "count": 1,
    "skip": 0,
    "totalCount": 1,
  },
}
`;

exports[`ConferenceQueries getConferences should return a paged list of conferences: #3 1`] = `
Object {
  "data": Array [
    Object {
      "id": "81bdc928-b92d-4111-91f9-3ef93e203e88",
      "name": "Conference 1",
      "rooms": Array [
        Room {
          "id": "8c4bb08a-befe-460c-818a-71c47ecb0761",
          "maxParticipants": 50,
          "name": "Room 1",
        },
        Room {
          "id": "ce63d11d-c51f-4320-a997-fb31b42a6e08",
          "maxParticipants": 50,
          "name": "Room 2",
        },
      ],
    },
    Object {
      "id": "3103e833-90d5-47a9-aace-66432881019e",
      "name": "Conference 2",
      "rooms": Array [
        Room {
          "id": "c6ddd134-3edd-4daa-9f59-f29a95650cc3",
          "maxParticipants": 25,
          "name": "Room 7",
        },
        Room {
          "id": "f89d9f18-6611-4520-8bff-8347c70a0b45",
          "maxParticipants": 35,
          "name": "Room 8",
        },
      ],
    },
  ],
  "meta": Object {
    "count": 2,
    "skip": 0,
    "totalCount": 2,
  },
}
`;

exports[`ConferenceQueries getConferences should return an empty list if no conferences are found 1`] = `
Object {
  "data": Array [],
  "meta": Object {
    "count": 0,
    "skip": 0,
    "totalCount": 0,
  },
}
`;
